# mediasoup-client-native-cpp

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md
src/: Handler.h  RemotePlanBSdp.h  VoiceChannel.h  VoiceChannelData.h  WebSocketTransport.h  WorkQueue.h  example.cpp  log.h  requestId.h  request_id.h  sdpUtils.h  simpleListeners.h
